TH-216 - Front page changes so font looks more readable, fixed bug where credit was floating above submit

--- a/teamhuddle-api/app/assets/stylesheets/application.css.scss
+++ b/teamhuddle-api/app/assets/stylesheets/application.css.scss
@@ -565,7 +565,9 @@ li {
     width: 100%;
     height: 87vh;
   }
-
+  h4{
+    font-size:20px;
+  }
   .btn {
     font-size: 13px;
   }
